BiedronkaApp/force-app/main/default/objects/Shopping_Transaction__c/Shopping_Transaction__c.object-meta.xml
<CustomObject>
    <label>Shopping Transaction</label>
    <pluralLabel>Shopping Transactions</pluralLabel>
    <nameField>
        <label>Shopping Transaction Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>