BiedronkaApp/force-app/main/default/objects/Shopping_Transaction__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Store</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipName>Shopping_Transactions</relationshipName>
</CustomField>