BiedronkaApp/force-app/main/default/objects/Shopping_Transaction__c/fields/Cashier__c.field-meta.xml
<CustomField>
    <fullName>Cashier__c</fullName>
    <label>Cashier</label>
    <type>Text</type>
    <length>80</length>
</CustomField>