BiedronkaApp/force-app/main/default/objects/Shopping_Transaction__c/fields/Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method__c</fullName>
    <label>Payment Method</label>
    <type>Text</type>
    <length>80</length>
</CustomField>