BiedronkaApp/force-app/main/default/objects/Shopping_Transaction__c/fields/Transaction_Total__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Total__c</fullName>
    <label>Transaction Total</label>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
</CustomField>